# OutOfLens-IOT

./: .gitignore  Arduino.ino  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
Arduino/: Arduino.ino
arduino/fake/: CMakeLists.txt  main.c
arduino/original/: Arduino.ino
source/js/: arduino.js  arduino.js.map  crypto.js  crypto.js.map  global.js  global.js.map  request-manager.js  request-manager.js.map  request-test.js  request-test.js.map  test.js  user-space-credentials.js  user-space-credentials.js.map  webserver.js  webserver.js.map
source/ts/: .editorconfig  arduino.ts  crypto.ts  global.ts  interfaces.ts  request-manager.ts  test.ts  user-space-credentials.ts  webserver.ts
